test/error/E7.chigfn
{
	"type": "function",
	"name": "helloworld",
	"inputs": [],
	"outputs": [],
	"nodes": {
		"if": {
			"type": "hello"
		}
	}
}
